# wingpanel-monitor

./: README.md  meson.build
.github/workflows/: main.yml
data/: com.github.plugarut.wingpanel-monitor.appdata.xml.in  com.github.plugarut.wingpanel-monitor.desktop.in  com.github.plugarut.wingpanel-monitor.gschema.xml  meson.build
data/icons/: Application.css  icons.indicator.gresource.xml
debian/: changelog  control  copyright  rules
src/: Application.vala  DisplayWidget.vala  Indicator.vala  IndicatorWidget.vala  MainWindow.vala  Network.vala  PopoverWidget.vala  PopoverWidgetRow.vala  Toggles.vala
src/Services/: Cpu.vala  Memory.vala  Network.vala  System.vala  Utils.vala
src/Widgets/: DisplayWidget.vala  IndicatorWidget.vala  NetworkWidget.vala  PopoverWidget.vala  PopoverWidgetRow.vala  SpinRow.vala  Toggles.vala
